--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 	<artifactId>spring-mvc-5.3.x-legacy-archetype</artifactId>
 	<version>1.0</version>
 	<packaging>maven-archetype</packaging>
+	<url>https://github.com/green424minee/spring-mvc-5.3.x-legacy-archetype</url>
 
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
