--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -8,16 +8,21 @@
 	<version>${version}</version>
 	<packaging>war</packaging>
 
-	<name>quickstart</name>
+	<name>spring-mvc-5.3.x-legacy</name>
 
 	<properties>
 		<m2eclipse.wtp.contextRoot>/</m2eclipse.wtp.contextRoot>
+		
+		<!-- 자바 컴파일러 버전 설정 -->
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		
+		<!-- 스프링 프레임워크 버전 설정 -->
 		<org.springframework-version>5.3.15</org.springframework-version>
 	</properties>
 
 	<dependencies>
+		<!-- spring-webmvc 및 Servlet 의존성 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
@@ -41,6 +46,7 @@
 			<version>1.2</version>
 		</dependency>
 
+		<!-- JdbcTemplate 및 commons DBCP2 / MySql Connector 의존성 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
@@ -57,6 +63,7 @@
 			<version>8.0.28</version>
 		</dependency>
 
+		<!-- Unit Test 의존성 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
@@ -70,6 +77,7 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- logger 의존성(slf4j - logback) -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -91,6 +99,7 @@
 			<version>1.2.10</version>
 		</dependency>
 
+		<!-- 기타 -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
